@@ -18,6 +18,6 @@
 		<integer>533</integer>
 	</array>
 	<key>IBSystem Version</key>
-	<string>6C115</string>
+	<string>6F21</string>
 </dict>
 </plist>
